# kedarium-engine

./: CMakeLists.txt  build.sh
examples/: CMakeLists.txt  Main.cpp
include/Kedarium/: Camera.hpp  Color.hpp  Core.hpp  File.hpp  Graphics.hpp  Image.hpp  Keys.hpp  Solids.hpp  Space.hpp  Window.hpp
resources/Shaders/: default.frag  default.vert
src/: CMakeLists.txt  Camera.cpp  Core.cpp  File.cpp  Graphics.cpp  Image.cpp  Solids.cpp  Space.cpp  Window.cpp
